<resources>
    <string name="app_name">project_2</string>
    <string name="run_sim">Run</string>
    <string name="stop_sim">Stop</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="color_picker_alive">Change Alive Color</string>
    <string name="color_picker_dead">Change Dead Color</string>
    <string name="clone_activity">Clone Game</string>
    <string name="slider_slow">Slow</string>
    <string name="slider_fast">Fast</string>
    <string name="tt_height">Height</string>
    <string name="tt_width">Width</string>
</resources>
