<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/clone_activity"
          android:title="@string/clone_activity"
          app:showAsAction="always"/>

    <item android:id="@+id/save"
          android:title="@string/save"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/load"
          android:title="@string/load"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/delete"
          android:title="@string/delete"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/color_picker_alive"
          android:title="@string/color_picker_alive"/>

    <item android:id="@+id/color_picker_dead"
          android:title="@string/color_picker_dead"/>
</menu>