<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/colony_recycler_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/run_sim_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run_sim"/>
        <Button
            android:id="@+id/reset_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"/>
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/slider_slow"/>
        <SeekBar android:id="@+id/slider_sim_rate"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                 android:max="10"
                 android:min="1"
        android:tickMark="@drawable/ic_tick_slider"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/slider_fast"/>
    </LinearLayout>


</LinearLayout>

